style.css defined h2 tag height as 3vh. This was causing the refresh issue since the height overlap of the tag kept shifting.

--- a/style.css
+++ b/style.css
@@ -94,7 +94,7 @@ h1 {
  
 h2 {
   font-family: 'Annie Use Your Telescope', cursive;
-  font-size: 3vh;
+  font-size: 1.4em;
   position: relative;
   top: 0vh;
 }
